--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: Tern
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: CPUTern
 # 头像里面的描述
 avatarDesc: CS / My Story
-url: "http://Tern.io"
+url: "http://ternyoung.github.io"
 
 # Comment
 comment:
@@ -41,7 +41,7 @@ ga:
 #
 #
 #  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
+# 帮忙star一下，感谢~😆 地址： https://github.com/TernYoung/TernYoung.github.io
 #
 #
 # 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
