--- a/themes/diaspora/_config.yml
+++ b/themes/diaspora/_config.yml
@@ -3,7 +3,6 @@ menu:
   Me: /Me/
   Github: https://github.com/TernYoung
   CSDN: https://blog.csdn.net/TernYoung
-  知乎: https://www.zhihu.com/people/tern/activities
   分类: /categories/
   归档: /archives/
   标签云: /tags/
@@ -20,7 +19,7 @@ mp3:
   - http://link.hhtjim.com/qq/001faIUs4M2zna.mp3
 
 # 首页封面图, 为空时取文章的cover作为封面
-welcome_cover: # /img/welcome-cover.jpg
+welcome_cover: /img/welcome-cover.jpg
 
 # 默认文章封面图
 cover: /img/cover.jpg
@@ -29,35 +28,50 @@ cover: /img/cover.jpg
 scrollbar: true
 
 # Gitalk 评论插件（https://github.com/gitalk/gitalk）
-gitalk:
-    enable: true
-    # 是否自动展开评论框
-    autoExpand: false
-    #ID
-    githubID: TernYoung
-    # 应用编号
-    clientID: 'f2e3994e079fbdf9cc8d'
-    # 应用秘钥
-    clientSecret: 'd0ca50a1dd9c21075525decfd7b48143478c7cab'
-    # issue仓库名
-    repo: 'TernYoung.github.io'
-    # Github名
-    owner: 'TernYoung'
-    # Github名
-    admin: ['TernYoung']
-    # Ensure uniqueness and length less than 50
-    id: location.pathname
-    # Facebook-like distraction free mode
-    distractionFreeMode: true
+# gitalk:
+#     enable: true
+#     # 是否自动展开评论框
+#     autoExpand: false
+#     #ID
+#     githubID: TernYoung
+#     # 应用编号
+#     clientID: 'f2e3994e079fbdf9cc8d'
+#     # 应用秘钥
+#     clientSecret: 'd0ca50a1dd9c21075525decfd7b48143478c7cab'
+#     # issue仓库名
+#     repo: 'TernYoung.github.io'
+#     # Github名
+#     owner: 'TernYoung'
+#     # Github名
+#     admin: ['TernYoung']
+#     # Ensure uniqueness and length less than 50
+#     id: location.pathname
+#     # Facebook-like distraction free mode
+#     distractionFreeMode: true
+
+# Livere评论系统
+livere:
+  enable: false
+  livere_uid: MTAyMC80NTM3Ny8yMTg4OQ==
 
 # 网站关键字
 keywords: Tern
 
 # 要使用google_analytics进行统计的话，这里需要配置ID
-google_analytics: 
+# google_analytics: 
+baidu_tongji:
+  enable: true
+  sitecode:  8ed631e35fec02d0275a0fec8cd93734
 
 # 网站ico
 favicon: /img/favicon.png
 
 # rss文件
 rss: atom.xml
+
+# MathJax Support
+mathjax:
+  enable: true
+  # per_page: true
+  #cdn: //cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML
+  cdn: //cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
