--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Tern
-subtitle: 个人站
-description: 
+title: CPUTern
+subtitle: 脑阔子疼
+description: 脑阔子疼的个人站
 #keywords: Tern
-author: Tern
+author: CPUTern
 language: zh-CN
 timezone:
 
