--- a/themes/diaspora/_config.yml
+++ b/themes/diaspora/_config.yml
@@ -8,15 +8,15 @@ menu:
   标签云: /tags/
 
 # 是否显示目录
-TOC: false
+TOC: true
 
 # 是否自动播放音乐
 autoplay: false
 
 # 默认音乐
 mp3: 
-  - http://link.hhtjim.com/163/5146554.mp3
-  - http://link.hhtjim.com/qq/001faIUs4M2zna.mp3
+  - https://link.hhtjim.com/163/150361.mp3
+  - https://link.hhtjim.com/163/1365393542.mp3
 
 # 首页封面图, 为空时取文章的cover作为封面
 welcome_cover: /img/welcome-cover.jpg
