--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "hexo-tag-bili": "^1.0.0",
+    "hexo-tag-fancybox_img": "^1.0.1"
   }
 }
