--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -10,7 +10,11 @@ description: Live your life with passion! With some drive!
 #cdn: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6
 pjax: 1
 # 1开启
-mathjax: 1
+# MathJax Support
+mathjax:
+  enable: true
+  per_page: true
+
 
 notice: 功能全面升级...
 lazyloadImg: /icon/loader/orange.progress-bar-stripe-loader.svg
