--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -11,7 +11,7 @@ description: Shit Happens But Life Goes On！
 pjax: 1
 # 1开启
 # MathJax Support
-mathjax: true
+mathjax: 1
 
 notice: 全面升级...
 lazyloadImg: https://cdn.jsdelivr.net/gh/TernYoung/nicePicture/icon/loader/orange.progress-bar-stripe-loader.svg
