--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -13,7 +13,7 @@ pjax: 1
 # MathJax Support
 mathjax: 1
 
-notice: 全面升级...
+notice: 我们个体能做的，就是不断修炼，身藏利刃，变得更强大
 lazyloadImg: https://cdn.jsdelivr.net/gh/TernYoung/nicePicture/icon/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
