--- a/themes/Sakura/_config.yml
+++ b/themes/Sakura/_config.yml
@@ -5,15 +5,15 @@ siteName: Tern
 favicon: /images/favicon.png
 cdn: https://cdn.jsdelivr.net/gh/TernYoung/nicePicture
 avatar: /icon/favicon.png
-url: http://www.cputern.top
-description: Shit Happens But Life Goes On！
+url: www.cputern.top
+description: Shit Happens But Life Goes On
 #cdn: https://cdn.jsdelivr.net/gh/honjun/cdn@1.6
 pjax: 1
 # 1开启
 # MathJax Support
 mathjax: 1
 
-notice: 不断修炼，身藏利刃，变得更强大
+notice: 学更多的东西！
 lazyloadImg: https://cdn.jsdelivr.net/gh/TernYoung/nicePicture/icon/loader/orange.progress-bar-stripe-loader.svg
 
 menus:
